--- a/static/index.html
+++ b/static/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <body>
-<h1><img src="phonestagram.png" alt="Phonestagram"/></h1>
+<h1>Phonestagram</h1>
 <img id="photo" src="" alt="latest photo approved by admin"/>
 <script src="/socket.io/socket.io.js"></script>
 <script>
